--- a/GwentBot.GUI/App.xaml
+++ b/GwentBot.GUI/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="GwentBot.App"
+﻿<Application x:Class="GwentBot.GUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GwentBot"
+             xmlns:local="clr-namespace:GwentBot.GUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
