добавлена темная тема GUI; создана основа DI классов управления устройствами ввода.

--- a/GwentBot.GUI/MainWindow.xaml
+++ b/GwentBot.GUI/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GwentBot.GUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="150" Width="200">
+        Title="MainWindow" Height="150" Width="200" Background="DimGray">
     <Grid>
-            <StackPanel>
-        <Button Name="btStart" Height="70" Click="BtStart_Click">Старт</Button>
-        <Button Name="btCheckVisability" Click="Button_Click">Проверить видимость игры</Button>
-        <TextBlock Name="tbGlobalStateList"></TextBlock>
-    </StackPanel>
+        <StackPanel>
+            <Button Name="btStart" Height="70" Click="BtStart_Click">Старт</Button>
+            <Button Name="btCheckVisability" Click="Button_Click">Проверить видимость игры</Button>
+            <TextBlock Name="tbGlobalStateList"></TextBlock>
+        </StackPanel>
     </Grid>
 </Window>
