изменено MainWindow в GUI, убрана возможность изменять размер окна

--- a/GwentBot.GUI/MainWindow.xaml
+++ b/GwentBot.GUI/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GwentBot.GUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="150" Width="200" Background="DimGray">
+        Title="MainWindow" Height="150" Width="200" Background="DimGray" ResizeMode="NoResize">
     <Grid>
         <StackPanel>
             <Button Name="btStart" Height="70" Click="BtStart_Click">Старт</Button>
